--- a/stylesheets/_singularity-extras.scss
+++ b/stylesheets/_singularity-extras.scss
@@ -1,2 +1,3 @@
+@import "singularity-extras/helpers";
 @import "singularity-extras/generators";
-@import "singularitygs/output";
+@import "singularity-extras/output";
