Added Layout mixin for overriding global context as a block

--- a/stylesheets/_singularity-extras.scss
+++ b/stylesheets/_singularity-extras.scss
@@ -1,3 +1,4 @@
 @import "singularity-extras/helpers";
 @import "singularity-extras/generators";
 @import "singularity-extras/output";
+@import "singularity-extras/layouts";
