--- a/examples/css/test.css
+++ b/examples/css/test.css
@@ -1,46 +1,102 @@
-/* line 12, ../sass/test.scss */
-#layouts {
-  content: 'Initial Layout';
-  width: 25%;
+/* line 16, ../sass/test.scss */
+* {
+  box-sizing: border-box;
+}
+
+/* line 20, ../sass/test.scss */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* line 25, ../sass/test.scss */
+div {
+  height: 10vh;
+  margin: 0;
+  padding: 0;
+}
+
+/* line 31, ../sass/test.scss */
+.foo {
+  background: red;
+  width: 320px;
   float: left;
   margin-right: -100%;
-  margin-left: 37.5%;
-  clear: none;
-  content: 'Inner Layout';
-  width: 13.7931%;
-  clear: right;
-  float: left;
-  margin-right: 3.44828%;
-  content: 'Back to Initial Layout';
-  width: 25%;
+  margin-left: 0.5em;
+}
+
+/* line 36, ../sass/test.scss */
+.bar {
+  background: orange;
+  width: -webkit-calc((((100% - (520px + 5em)) / (4))) * 1);
+  width: calc((((100% - (520px + 5em)) / (4))) * 1);
   float: left;
   margin-right: -100%;
-  margin-left: 37.5%;
-  clear: none;
+  margin-left: -webkit-calc(0.5em + (320px + 1em));
+  margin-left: calc(0.5em + (320px + 1em));
 }
-@media (min-width: 500px) {
-  /* line 12, ../sass/test.scss */
-  #layouts {
-    content: 'Inner Layout, Breakpoint';
-    width: 13.7931%;
-    clear: right;
-    float: left;
-    margin-right: 3.44828%;
-    content: 'Nested Layout';
-    width: 32%;
-    clear: right;
-    float: left;
-    margin-right: 2%;
-  }
+
+/* line 41, ../sass/test.scss */
+.qux {
+  background: green;
+  width: 200px;
+  float: left;
+  margin-right: -100%;
+  margin-left: -webkit-calc(0.5em + (320px + 1em) + (((100% - (520px + 5em)) / (4)) * 1 + 1em) + (((100% - (520px + 5em)) / (4)) * 2 + 1em));
+  margin-left: calc(0.5em + (320px + 1em) + (((100% - (520px + 5em)) / (4)) * 1 + 1em) + (((100% - (520px + 5em)) / (4)) * 2 + 1em));
 }
-@media (min-width: 500px) {
-  /* line 12, ../sass/test.scss */
-  #layouts {
-    content: 'Initial Breakpoint Layout';
-    width: 28.57143%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 21.42857%;
-    clear: none;
-  }
+
+/* line 46, ../sass/test.scss */
+.where {
+  background: blue;
+  width: -webkit-calc((((100% - (520px + 5em)) / (4))) * 2);
+  width: calc((((100% - (520px + 5em)) / (4))) * 2);
+  float: left;
+  margin-right: -100%;
+  margin-left: -webkit-calc(0.5em + (320px + 1em) + (((100% - (520px + 5em)) / (4)) * 1 + 1em));
+  margin-left: calc(0.5em + (320px + 1em) + (((100% - (520px + 5em)) / (4)) * 1 + 1em));
+}
+
+/* line 51, ../sass/test.scss */
+.final {
+  background: grey;
+  width: -webkit-calc((((100% - (520px + 5em)) / (4))) * 1);
+  width: calc((((100% - (520px + 5em)) / (4))) * 1);
+  float: right;
+  margin-left: 0;
+  margin-right: 0.5em;
+}
+
+/* line 56, ../sass/test.scss */
+.baz {
+  background: yellow;
+  clear: both;
+  width: -webkit-calc((((100% - (520px + 5em)) / (4)) * 1 + 1em) + (((100% - (520px + 5em)) / (4)) * 2));
+  width: calc((((100% - (520px + 5em)) / (4)) * 1 + 1em) + (((100% - (520px + 5em)) / (4)) * 2));
+  float: left;
+  margin-right: -100%;
+  margin-left: -webkit-calc(0.5em + (320px + 1em));
+  margin-left: calc(0.5em + (320px + 1em));
+}
+
+/* line 63, ../sass/test.scss */
+.waldo {
+  background: purple;
+  clear: both;
+  width: -webkit-calc((((100% - (520px + 5em)) / (4)) * 2 + 1em) + (200px + 1em) + (((100% - (520px + 5em)) / (4)) * 1));
+  width: calc((((100% - (520px + 5em)) / (4)) * 2 + 1em) + (200px + 1em) + (((100% - (520px + 5em)) / (4)) * 1));
+  float: right;
+  margin-left: 0;
+  margin-right: 0.5em;
+}
+
+/* line 69, ../sass/test.scss */
+.double {
+  background: pink;
+  clear: both;
+  width: -webkit-calc((320px + 1em) + (((100% - (520px + 5em)) / (4)) * 1 + 1em) + (((100% - (520px + 5em)) / (4)) * 2 + 1em) + (200px));
+  width: calc((320px + 1em) + (((100% - (520px + 5em)) / (4)) * 1 + 1em) + (((100% - (520px + 5em)) / (4)) * 2 + 1em) + (200px));
+  float: left;
+  margin-right: -100%;
+  margin-left: 0.5em;
 }
